@@ -4,6 +4,7 @@ v6.1
 + Store pages now display a full size background
 + Added back links in the header (Forums, Games, Reviews)
 + Selecting booster packs in your inventory now shows the average price of three cards for that game
++ Added option to only search within product names
 + Added inventory marketplace support for Battleblock Theater items
 + Added a loading dialog to custom profile background selection
 : Fixed a bug that caused price comparison overlays to be partially hidden in some circumstances
